# starapi

./: .gitignore  README.md  new_openapi.json  openapi.json  openapi_schema.json  pyproject.toml  requirements.txt  setup.py  test.py  test2.py
examples/: docs.py  messages_group.py
openapi/: docs.html  encoder.py  test.py
starapi/: __init__.py  _types.py  app.py  checks.py  converters.py  cors.py  enums.py  errors.py  formatters.py  groups.py  middleware.py  openapi.py  parameters.py  requests.py  responses.py  routing.py  server.py  state.py  utils.py
starapi/openapi/: client.py
webserver/backend/middleware/: auth.py
webserver/backend/payloads/v1/: actions.py  auth.py  base.py  channels.py  gambling.py  interactions.py  internal.py  points.py  shop.py
