[project]
authors = [{name = "cibere", email = "cibere.dev@gmail.com"}]
dependencies = [
  "yarl",
  "starlette",
]
name = "starapi"
requires-python = ">=3.11"
version = "0.0.1a"

[project.optional-dependencies]
all = [
  "uvicorn[standard]",
  "python-multipart",
  "msgspec",
]
standard = [
  "uvicorn[standard]",
  "msgspec",
]

[project.urls]
Source = "https://github.com/cibere/starapi"
