[project]
authors = [{name = "cibere", email = "cibere.dev@gmail.com"}]
dependencies = [
  "yarl",
  "starlette",
]
name = "starapi"
requires-python = ">=3.11"
version = "0.0.1a"

[project.optional-dependencies]
all = [
  "uvicorn[standard]",
  "python-multipart",
  "msgspec",
]
standard = [
  "uvicorn[standard]",
  "msgspec",
]

[project.urls]
Source = "https://github.com/cibere/starapi"

[tool.black]
line-length = 125
skip-string-normalization = true

[tool.isort]
combine_as_imports = true
combine_star = true
line_length = 125
profile = "black"

[tool.pyright]
pythonVersion = "3.11"
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnusedImport = "error"
typeCheckingMode = "basic"
